[package]
name = "cloud-clips"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
derive_more = "0.99.17"
rand = "0.8.5"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

